# markitdown-pdfminersix-vlm

./: .gitignore  README.md  pyproject.toml
src/: _plugin.py  config.py  main.py
src/markitdown_pdfminersix_vlm/: __init__.py  _plugin.py
src/markitdown_pdfminersix_vlm/utils/: converter.py  high_level.py  image.py  openai_service.py
src/utils/: converter.py  high_level.py  image.py
